[package]
name = "retris"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = { version = "0.14.1" }
bevy-inspector-egui = { version = "0.17", optional = true }
colored = { version = "2.0", optional = true }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
